--- a/templates/backend/partials/__navbar.html.twig
+++ b/templates/backend/partials/__navbar.html.twig
@@ -12,10 +12,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="nav" class="navbar-nav w-100 d-flex justify-content-lg-between">
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="#accueil">Accueil</a>
+                        <a class="nav-link" href="{{ path('home') }}">Accueil</a>
                     </li>
                     <li class="nav-item text-center adherent">
-                        <a class="nav-link btn btn-success adherent-btn btn-sm text-white" href="">
+                        <a class="nav-link btn btn-success adherent-btn btn-sm text-white" href="/logout">
                             <i class="fas fa-sign-out-alt"></i>
                             Déconnexion
                         </a>
