--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -30,13 +30,13 @@
             </h6>
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('company_index') }}">
                     <i class="far fa-hospital"></i>
                     Pharmacies
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('user_index') }}">
                     <i class="far fa-user"></i>
                     Gestionnaires
                 </a>
