--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -38,9 +38,10 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item adherent">
-                            <a class="nav-link btn btn-success adherent-btn btn-sm" href="">
+                            <a class="nav-link login-btn btn btn-success adherent-btn btn-sm" href="">
                                 <i></i>
                                 Espace Adhérent
+                                <i class="fas fa-sign-in-alt"></i>
                             </a>
                         </li>
                     </ul>
@@ -295,9 +296,9 @@
                         <label for="exampleFormControlTextarea1">Message</label>
                         <textarea type="textarea" class="form-control" id="exampleFormControlTextarea1" placeholder="Veuillez écrire ici votre message..." required rows="10"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-success">
+                    <button type="submit" class="form-btn btn btn-success">
                         Envoyer
-                        <i></i>
+                        <i class="far fa-paper-plane"></i>
                     </button>
                 </form>
             </section>
@@ -317,8 +318,32 @@
                     <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)1 34 20 52 68</a>
                 </div>    
             </div>
-        </footer>
+            <div class="footer-infos m-5 scrolltop">
+                  <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt"></i>
+            </div>
+            {# <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-level-up-alt"></i></button> #}
 
+            
+        </footer>
     </div>
+
+    <script>
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction() {
+        if (document.body.scrollTop > 1800 || document.documentElement.scrollTop > 1800) {
+        document.getElementById("myBtn").style.display = "block";
+        } else {
+        document.getElementById("myBtn").style.display = "none";
+        }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+        window.scrollTo(0,0);
+        }
+
+    </script>
 
 {% endblock %}
