--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -42,7 +42,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('file_index') }}">
                     <i class="far fa-file-alt"></i>
                     Documents
                 </a>
