--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -10,7 +10,7 @@
         <!-- H E A D E R  S E C T I O N -->
         <header class="header">
             <!-- Navigation with a burger menu -->
-            <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white">
+            <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white ">
                 <a class="navbar-brand" href="#">
                     <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
                 </a>
@@ -18,7 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul id="nav" class="navbar-nav">
+                    <ul id="nav" class="navbar-nav mx-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="#accueil">Accueil</a>
                         </li>
@@ -99,7 +99,7 @@
             <section id="valeurs">
             <!-- Respect -->
             <div class="container-fluid p-0 text-center my-5">
-                <h2 class="titre h1-responsive font-weight-bold my-5">Nos valeurs</h2>
+                <h2 class="titre-valeurs h1-responsive font-weight-bold my-5">Nos valeurs</h2>
                 <div class="valeurs">
                     <img class="valeurs-img" src="{{ asset('images/respect.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
@@ -174,7 +174,7 @@
             <!-- N O T R E  D I F F E R E N C E -->
             <section id="difference">
                 <div class="container-fluid p-0 text-center m-5">
-                <h2 class="titre h1-responsive font-weight-bold m-5">Notre différence</h2>
+                <h2 class="titre-difference h1-responsive font-weight-bold m-5">Notre différence</h2>
                     <div class="panel">
                         <div class="panel-box">
                             <div class="panel-box-text m-3">
@@ -223,7 +223,7 @@
             <!-- N O S  O B J E C T I F S -->
             <section id="objectifs">
                 <div class="container-fluid p-0 text-center m-5">
-                <h2 class="titre h1-responsive font-weight-bold m-5">Nos objectifs</h2>
+                <h2 class="titre-objectifs h1-responsive font-weight-bold m-5">Nos objectifs</h2>
                     <div class="panel">
                         <div class="panel-box m-5">
                             <div class="panel-box-text m-5">
@@ -282,7 +282,7 @@
             </section>
             <!-- C O N T A C T -->
             <section id="#contact "class="container-fluid p-0 text-center m-5">
-             <h2 class="titre h1-responsive font-weight-bold my-5">Contact</h2>
+             <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
                 <form class="m-5">
                     <div class="form-group">
                         <label for="formGroupExampleInput2">NOM Prénom</label>
@@ -308,7 +308,7 @@
             <div class="footer-dl m-5 text-center">
                 <h6 class="h6 text-uppercase">Téléchargez notre plaquette</h6>
                 <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
-                    <i class="fa fa-download fa-4x m-4" aria-hidden="true"></i>
+                    <i class="fa fa-download fa-3x m-4" aria-hidden="true"></i>
                 </a>
             </div>
             <div class="footer-infos m-5 text-center">
@@ -318,14 +318,9 @@
                     <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)1 34 20 52 68</a>
                 </div>    
             </div>
-            <div class="footer-infos m-5 scrolltop">
-                  <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt"></i>
-            </div>
-            {# <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-level-up-alt"></i></button> #}
-
-            
+                  <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt"></i>            
         </footer>
-    </div>
+        
 
     <script>
         // When the user scrolls down 20px from the top of the document, show the button
