ajout table post + modal

--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -47,6 +47,12 @@
                     Documents
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('post_index') }}">
+                    <i class="far fa-file-alt"></i>
+                    Posts
+                </a>
+              </li>
             </ul>
           </div>
         </nav>
