--- a/templates/backend/user/show.html.twig
+++ b/templates/backend/user/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Utilisateurs{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Utilisateurs</h1>
 
     <table class="table">
         <tbody>
@@ -12,11 +12,11 @@
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
-                <th>Fisrtname</th>
+                <th>Prénom</th>
                 <td>{{ user.firstname }}</td>
             </tr>
             <tr>
-                <th>Lastname</th>
+                <th>Nom</th>
                 <td>{{ user.lastname }}</td>
             </tr>
             <tr>
@@ -28,7 +28,7 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>IsActive</th>
+                <th>Actif</th>
                 <td>{{ user.isActive ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
