--- a/templates/backend/user/show.html.twig
+++ b/templates/backend/user/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Société</th>
-                <td>{{ user.company.name }}</td>
+                <td>{{ user.company }}</td>
             </tr>
             <tr>
                 <th>Email</th>
