sérialization des users en cours 3

--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -59,7 +59,11 @@
                 },
                 { data: 'firstname' },
                 { data: 'lastname' },
-                { data: 'company' },
+                { data: 'company',
+                  render: function (data, index, row) {
+                    return row.company.name || '-'
+                  } 
+                },
                 { data: 'email' },
                 { 
                     data: 'isActive',
