--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Liste des sociétés</h1>
 
 <div class="card p-4">
-    <table id="companyTable" class="table table-hover table-striped table-responsive w-100">
+    <table id="companyTable" class="table table-hover table-striped">
         <thead>
             <tr>
                 <th>#</th>
