corrigé info dans la modal user

--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -79,7 +79,7 @@
                     $('#firstname').val(data.firstname)
                     $('#lastname').val(data.lastname)
                     $('#email').val(data.email)
-                    $('#company').val(data.company.name)
+                    $('#company').val(data.company)
 
                     $('#editModal').modal()
 
