--- a/templates/backend/user/_editModal.html.twig
+++ b/templates/backend/user/_editModal.html.twig
@@ -10,6 +10,10 @@
       </div>
       <div class="modal-body">
         <form id="userEdit">
+            <div class="form-group mr-1">
+                <label for="company">Pharmacie</label>
+                <input class="form-control" type="text" name="company" id="company">
+            </div>
             <div class="form-group">
                 <label for="firstname">Prénom</label>
                 <input class="form-control" type="text" name="firstname" id="firstname">
@@ -21,12 +25,6 @@
             <div class="form-group">
                 <label for="email">Email</label>
                 <input class="form-control" type="text" name="email" id="email">
-            </div>
-            <div class="input-group">
-              <div class="form-group mr-1">
-                  <label for="company">Société</label>
-                  <input class="form-control" type="text" name="company" id="company">
-              </div>
             </div>
         </form>
       </div>
