--- a/templates/backend/post/_editModal.html.twig
+++ b/templates/backend/post/_editModal.html.twig
@@ -16,7 +16,8 @@
             </div>
             <div class="form-group">
                 <label for="content">Contenu du post</label>
-                <input class="form-control" type="text" name="content" id="content">
+                <textarea class="form-control" type="text" name="content" id="content">
+                </textarea>
             </div>
             <div class="form-group">
                 <label for="author">Auteur du post</label>
