serialization group post ok

--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -49,8 +49,8 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ path('post_index') }}">
-                    <i class="far fa-file-alt"></i>
-                    Posts
+                    <i class="far fa-newspaper"></i>
+                    Articles
                 </a>
               </li>
             </ul>
