--- a/templates/backend/post/_editModal.html.twig
+++ b/templates/backend/post/_editModal.html.twig
@@ -1,9 +1,9 @@
 <!-- Modal -->
 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="editModalTitle">Modifier le poste</h5>
+        <h5 class="modal-title" id="editModalTitle">Modifier l'article</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -11,21 +11,21 @@
       <div class="modal-body">
         <form id="postEdit">
             <div class="form-group">
-                <label for="title">Titre du post</label>
+                <label for="title">Titre de l'article</label>
                 <input class="form-control" type="text" name="title" id="title">
             </div>
             <div class="form-group">
-                <label for="content">Contenu du post</label>
+                <label for="content">Contenu de l'article</label>
                 <textarea class="form-control" type="text" name="content" id="content">
                 </textarea>
             </div>
             <div class="form-group">
-                <label for="author">Auteur du post</label>
+                <label for="author">Auteur de l'article</label>
                 <input class="form-control" type="text" name="author" id="author">
             </div>
             <div class="input-group">
               <div class="form-group mr-1">
-                  <label for="picture">Image/document du post</label>
+                  <label for="picture">Image/document de l'article</label>
                   <input class="form-control" type="text" name="picture" id="picture">
               </div>
             </div>
