--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Liste des sociétés{% endblock %}
+{% block title %}Liste des pharmacies{% endblock %}
 
 {% block body %}
-    <h1>Liste des sociétés</h1>
+    <h1>Liste des pharmacies</h1>
 
 <div class="card p-4">
-    <table id="companyTable" class="table table-hover table-striped table-responsive w-100">
+    <table id="companyTable" class="table table-hover table-striped w-100">
         <thead>
             <tr>
                 <th>#</th>
@@ -16,9 +16,9 @@
                 <th>Code postal</th>
                 <th>Ville</th>
                 <th>Photo de la pharmacie</th>
-                <th>Utilisateur</th>
+                <th>Membre rattaché</th>
                 <th>Commercial</th>
-                <th>Actif</th>
+                <th>Active</th>
             </tr>
         </thead>
         <tbody>
@@ -52,6 +52,8 @@
                         <btn class="btn btn-success btn-sm edit-modal"
                             data-id="${data}"
                             data-name="${row.name}"
+                            data-member="${(row.user.firstname + ' ' + row.user.lastname)}"
+                            data-commercial="${(row.user.firstname + ' ' + row.user.lastname)}"
                             data-adress1="${row.firstAdressField}"
                             data-adress2="${row.secondAdressField}"
                             data-postalcode="${row.postalCode}"
@@ -98,6 +100,8 @@
                     var data = $(this).data()
 
                     $('#companyName').val(data.name)
+                    $('#companyMember').val(data.member)
+                    $('#companyCommercial').val(data.commercial)
                     $('#companyAdress1').val(data.adress1)
                     $('#companyAdress2').val(data.adress2)
                     $('#companyPostCode').val(data.postalcode)
