--- a/templates/backend/file/edit.html.twig
+++ b/templates/backend/file/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('backend/file/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('backend_file_index') }}">back to list</a>
+    <a href="{{ path('backend_file_index') }}">Retour à la liste des documents</a>
 
     {# {{ include('backend/file/_delete_form.html.twig') }} #}
 {% endblock %}
