--- a/templates/backend/post/index.html.twig
+++ b/templates/backend/post/index.html.twig
@@ -9,7 +9,7 @@
     <h1>Liste des articles</h1>
 
 <div class="card p-4">
-    <table id="postTable" class="table table-hover table-striped table-responsive w-100">
+    <table id="postTable" class="table table-hover table-striped  w-100">
         <thead>
             <tr>
                 <th>#</th>
@@ -53,7 +53,7 @@
                             data-id="${data}"
                             data-title="${row.title}"
                             data-content="${row.content}"
-                            data-author="${row.author}"
+                            data-author="${(row.author.firstname + ' ' + row.author.lastname)}"
                             data-picture="${row.picture}"
                         >
                             <i class="fas fa-plus-circle"></i>
