--- a/templates/backend/user/edit.html.twig
+++ b/templates/backend/user/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('backend/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('backend_user_index') }}">back to list</a>
+    <a href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
 
     {# {{ include('backend/user/_delete_form.html.twig') }} #}
 {% endblock %}
