--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Liste des utilisateurs</h1>
 
     <div class="card p-4">
-        <table id="userTable" class="table table-hover table-striped table-responsive w-100">
+        <table id="userTable" class="table table-hover table-striped w-100">
             <thead>
                 <tr>
                     <th>#</th>
