--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -12,13 +12,13 @@
                 <th>#</th>
                 <th>Nom</th>
                 <th>Adresse</th>
-                <th>Complément d'adresse</th>
+                <th>Complément</th>
                 <th>Code postal</th>
                 <th>Ville</th>
-                <th>Photo de la pharmacie</th>
-                <th>Membre rattaché</th>
+                {# <th>Photo de la pharmacie</th> #}
+                <th>Gestionnaire</th>
                 <th>Commercial</th>
-                <th>Active</th>
+                {# <th>Active</th> #}
             </tr>
         </thead>
         <tbody>
@@ -69,7 +69,7 @@
                 { data: 'secondAdressField' },
                 { data: 'postalCode' },
                 { data: 'city' },
-                { data: 'picture' },
+                {# { data: 'picture' }, #}
                 { 
                     data: 'user' ,
                     render: function(data, index, row) {
@@ -81,19 +81,18 @@
                 { 
                     data: 'commercial' ,
                     render: function(data, index, row) {
-                        console.log(data)
                         if(data) {
                             return data.firstname + ' ' + data.lastname
                         }
                         return '-'
                     }
                 },
-                { 
+                {# { 
                     data: 'isActive',
                     render: function (data) {
                         return (data === true) ? 'oui' : 'non'
                     }
-                }
+                } #}
             ],
             initComplete: function() {
                 $('.edit-modal').click(function() {
