--- a/templates/home/blog.html.twig
+++ b/templates/home/blog.html.twig
@@ -5,85 +5,109 @@
 
 {% block body %}
 
-    <!-- Bootstrap Container -->
-    <div class="container-fluid p-0">
-        <!-- H E A D E R  S E C T I O N -->
-        <header class="header">
-            <!-- Navigation with a burger menu -->
-            <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white ">
-                <a class="navbar-brand" href="#">
-                    <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul id="nav" class="navbar-nav mx-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#accueil">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">Qui sommes-nous ?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#valeurs">Nos valeurs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#difference">Notre différence</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#objectifs">Nos objectifs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
-                        <li class="nav-item adherent">
-                            <a class="nav-link login-btn btn btn-success adherent-btn btn-sm" href="">
-                                <i></i>
-                                Espace Adhérent
-                                <i class="fas fa-sign-in-alt"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+<!-- Bootstrap Container -->
+<div class="container-fluid p-0">
+<!-- H E A D E R  S E C T I O N -->
+<header class="header">
+    <!-- Navigation with a burger menu -->
+    <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white ">
+        <a class="navbar-brand" href="#">
+            <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul id="nav" class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#accueil">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">Qui sommes-nous ?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#valeurs">Nos valeurs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#difference">Notre différence</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#objectifs">Nos objectifs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+                <li class="nav-item adherent">
+                    <a class="nav-link login-btn btn btn-primary adherent-btn btn-sm" href="">
+                        <i></i>
+                        Mon Espace
+                        <i class="far fa-user"></i>
+                    </a>
+                </li>
+                <li class="nav-item adherent">
+                    <a class="nav-link login-btn btn btn-success adherent-btn btn-sm" href="">
+                        <i></i>
+                        Espace Adhérent
+                        <i class="fas fa-sign-in-alt"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<!-- Section Blog--> 
+<div class="container">
+    <div class="blog mt-5">
+        <h1 class="blog-title mt-5 h1">Titre de l'actualité</h1>
+        <span class="blog-date badge badge-pill badge-success">Posté le 14 juin 2019</span>
+    </div>
+    <img class="img-fluid rounded blog-img mt-3 mb-5" src="http://placehold.it/1440x700" alt="">
+    <div class="blog-post mb-5 p-3">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
 
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="footer-dl m-5 text-center">
-                <h6 class="h6 text-uppercase">Téléchargez notre plaquette</h6>
-                <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
-                    <i class="fa fa-download fa-3x m-4" aria-hidden="true"></i>
-                </a>
-            </div>
-            <div class="footer-infos m-5 text-center">
-                <h6 class="h6 text-uppercase">Contact</h6>
-                <div class="footer-infos-element">
-                    <a id="mail" href="mailto:contact@ynovagroup.com" class="p-3">contact@ynovagroup.com</a>
-                    <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)1 34 20 52 68</a>
-                </div>    
-            </div>
-                  <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt"></i>            
-        </footer>
-        
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
 
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {scrollFunction()};
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptas reprehenderit tenetur, reiciendis vero error eaque voluptatem enim deleniti voluptates asperiores aperiam doloribus eligendi? Hic doloribus atque dicta voluptate aperiam ipsa similique. Aperiam commodi, dolore ab quasi fugiat quam nam, laborum fuga repudiandae, tempora facilis at. Alias magnam expedita architecto?</p>
+    </div>
+</div>
+<!-- Footer -->
+<footer class="footer container-fluid">
+    <div class="footer-dl m-5 text-center">
+        <h6 class="h6 text-uppercase mb-2">Téléchargez notre plaquette</h6>
+        <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
+            <i class="fa fa-download fa-3x m-4" aria-hidden="true"></i>
+        </a>
+    </div>
+    <div class="footer-infos m-5 text-center">
+        <h6 class="h6 text-uppercase mb-2">Contactez Ynovagroup</h6>
+        <div class="footer-infos-element">
+            <a id="mail" href="mailto:contact@ynovagroup.com" class="p-3">contact@ynovagroup.com</a>
+            <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)1 34 20 52 68</a>
+        </div>    
 
-        function scrollFunction() {
-        if (document.body.scrollTop > 1800 || document.documentElement.scrollTop > 1800) {
-        document.getElementById("myBtn").style.display = "block";
-        } else {
-        document.getElementById("myBtn").style.display = "none";
-        }
-        }
+        <h6 class="h6 text-uppercase mt-4 mb-2">Informations générales</h6>
+        <div class="footer-infos-element">
+            <a id="rgpd" href="www.ynovagroup.com/rgpd" class="p-3">Politique de confidentialité</a>
+        </div>    
+    </div>
+    <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt fa-3x"></i>
+</footer>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
 
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-        window.scrollTo(0,0);
-        }
+    function scrollFunction() {
+    if (document.body.scrollTop > 1800 || document.documentElement.scrollTop > 1800) {
+    document.getElementById("myBtn").style.display = "block";
+    } else {
+    document.getElementById("myBtn").style.display = "none";
+    }
+    }
 
-    </script>
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+    window.scrollTo(0,0);
+    }
+
+</script>
 
 {% endblock %}
