--- a/templates/home/rgpd.html.twig
+++ b/templates/home/rgpd.html.twig
@@ -44,6 +44,13 @@
                             <i class="fas fa-sign-in-alt"></i>
                         </a>
                     </li>
+                    <li class="nav-item adherent">
+                        <a class="nav-link login-btn btn btn-success adherent-btn btn-sm" href="">
+                            <i></i>
+                            Espace Adhérent
+                            <i class="fas fa-sign-in-alt"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
