--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -11,7 +11,7 @@
         <header class="header">
             <!-- Navigation with a burger menu -->
             <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white ">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#hero">
                     <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul id="nav" class="navbar-nav mx-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#accueil">Accueil</a>
+                            <a class="nav-link" href="#">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#about">Qui sommes-nous ?</a>
@@ -42,7 +42,6 @@
                             <li class="nav-item adherent">
                             <a class="nav-link btn btn-danger adherent-btn btn-sm" href="{{ path('app_logout') }}">Déconnexion</a>
                         </li> 
-                        {% else %}
                         <li class="nav-item adherent">
                             <a class="nav-link login-btn btn btn-primary adherent-btn btn-sm" href="">
                                 <i></i>
@@ -50,13 +49,15 @@
                                 <i class="far fa-user"></i>
                             </a>
                         </li>
+                        {% else %}
                         <li class="nav-item adherent">
                             <a class="nav-link login-btn btn btn-success adherent-btn btn-sm" href="{{ path('app_login') }}">
                                 <i></i>
                                 Espace Adhérent
                                 <i class="fas fa-sign-in-alt"></i>
                             </a>
-                        </li> #}
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
@@ -74,7 +75,7 @@
         <!-- M A I N  S E C T I O N -->
         <main class="main container-fluid p-0">
             <!-- Citation Section -->
-            <section id="#about" class="container-fluid p-0 text-center my-5">
+            <section id="about" class="container-fluid p-0 text-center my-5">
                 <!-- Section heading -->
                 <h2 class="titre h1-responsive font-weight-bold my-5">Qui sommes-nous ?</h2>
                 <div class="wrapper-carousel-fix">
@@ -294,7 +295,7 @@
                 </div>  
             </section>
             <!-- C O N T A C T -->
-            <section id="#contact "class="container-fluid p-0 text-center m-5">
+            <section id="contact"class="container-fluid p-0 text-center m-5">
              <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
                 <form class="m-5">
                     <div class="form-group">
